fixed Mobile Overflow due to Grid

--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -6,7 +6,7 @@
 	display: grid;
 	gap: 1rem;
 	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-	grid-auto-rows: 300px;
+	grid-auto-rows: 25%;
 }
 .card {
 	display: flex;
